[gd_scene load_steps=20 format=2]

[ext_resource path="res://Art/Images/Titlescreen/duza_2.png" type="Texture" id=1]
[ext_resource path="res://Art/Images/Titlescreen/duza_14.png" type="Texture" id=2]
[ext_resource path="res://Art/Images/Titlescreen/duza_4.png" type="Texture" id=3]
[ext_resource path="res://Art/Images/Titlescreen/duza_3.png" type="Texture" id=4]
[ext_resource path="res://Art/Images/Titlescreen/duza_12.png" type="Texture" id=5]
[ext_resource path="res://Art/Images/Titlescreen/duza_8.png" type="Texture" id=6]
[ext_resource path="res://Art/Images/Titlescreen/duza_11.png" type="Texture" id=7]
[ext_resource path="res://Art/Images/Titlescreen/duza_10.png" type="Texture" id=8]
[ext_resource path="res://Art/Images/Titlescreen/duza_6.png" type="Texture" id=9]
[ext_resource path="res://Art/Images/Titlescreen/duza_1.png" type="Texture" id=10]
[ext_resource path="res://Art/Images/Titlescreen/duza_5.png" type="Texture" id=11]
[ext_resource path="res://Art/Images/Titlescreen/duza_7.png" type="Texture" id=12]
[ext_resource path="res://Art/Images/Titlescreen/duza_13.png" type="Texture" id=13]
[ext_resource path="res://Art/Images/Titlescreen/duza_9.png" type="Texture" id=14]
[ext_resource path="res://Art/Calibri.tres" type="DynamicFont" id=15]
[ext_resource path="res://Scenes/Titlescreen.gd" type="Script" id=16]
[ext_resource path="res://Art/Introvideo.ogv" type="VideoStream" id=17]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="LargeTexture" id=2]

[node name="Titlescreen" type="Node2D"]
script = ExtResource( 16 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -66.0
margin_top = -66.0
margin_right = 1953.0
margin_bottom = 1112.0
color = Color( 0, 0, 0, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 967, 254 )
frames = SubResource( 1 )
frame = 4
playing = true

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 651.0
margin_top = 587.0
margin_right = 1281.0
margin_bottom = 774.0
custom_fonts/font = ExtResource( 15 )
text = "Play"

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 1925, 1081 )
texture = SubResource( 2 )

[node name="VideoTimer" type="Timer" parent="."]
one_shot = true

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_right = 1919.0
margin_bottom = 1080.0
stream = ExtResource( 17 )
volume_db = -20.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="VideoTimer" to="." method="_on_VideoTimer_timeout"]
[connection signal="finished" from="VideoPlayer" to="." method="_on_VideoPlayer_finished"]
